--- a/MYusufBayam_CV.tex
+++ b/MYusufBayam_CV.tex
@@ -43,7 +43,7 @@
 		\begin{cvsubsection}{Android Developer}{Migros}{July 2021}
 		Migros is the largest retail store chain in Turkey. Migros Company has 3 brands on online retail sector.
 			\begin{itemize}
-				\item Responsible from 3 applications of Migros(Sanalmarket, Macrocenter Online and Tazedirekt).
+				\item Responsible from 3 E-Commerce applications of Migros (Sanalmarket, Macrocenter Online and Tazedirekt).
 				\item Developed major features for 3 applications using mainly Kotlin but sometimes Java too.
 				\item Refactored Tazedirekt project from Java to Kotlin. Also implemented MVVM and DataBinding for Tazedirekt application.
 				\item Used Hilt for dependency injection.
@@ -54,7 +54,7 @@
 			Kunduz is a very promising education startup company in Turkey. Kunduz is active in 3 countries; Turkey, USA and India.		
 			\begin{itemize}
 				\item Responsibility of two applications(Kunduz Student \& Kunduz Tutor) written in only Kotlin.
-				\item Implemented various features in a fast development environment using Model-View-ViewModel architecture and reactive programming. 
+				\item Implemented various features in a fast development environment using MVVM architecture and reactive programming. 
 				\item Implemented simple unit tests using JUnit4.
 				\item Solved localization problems arising from product differences for 3 countries.
 				\item Used Koin for dependency injection.
@@ -64,6 +64,7 @@
 		\begin{cvsubsection}{Android Developer}{Bilyoner}{July 2020 - December 2020}
 			Bilyoner is the betting platform with the most members in Turkey. Their Android Application had about 10 million active users.				
 			\begin{itemize}
+			    \item Business logic is similar to E-Commerce applications.
 				\item Started to took responsibility of bigger features of Bilyoner Android Application which is written mainly in Kotlin but some old classes were Java.
 				\item Implemented end to end features using Model-View-Presenter pattern and RxJava/RxKotlin.
 				\item Used Dagger2 for dependency injection.
@@ -103,6 +104,16 @@
 	\end{cvsection}
 
     \vspace{\baselineskip}
+    
+    \begin{cvsection}{Side Projects}
+		\begin{cvsubsection}{PackPorter Android Application}{}{}
+			\begin{itemize}
+				\item Took responsibility to continue development from an out of date codebase.
+				\item Developed functionalities such as barcode reader, text recognition and camera feature using MLKit and CameraX API.
+				\item Responsible from refactoring and maintaning the codebase.
+			\end{itemize}
+		\end{cvsubsection}
+	\end{cvsection}
 	
 	\begin{cvsection}{Education}
 		\begin{cvsubsection}{Istanbul, Turkey}{Bogazici University}{Fall 2015 -- Fall 2020}
@@ -130,16 +141,16 @@
 	\begin{cvsection}{Additional Experience}
 		\begin{cvsubsection}{}{}{}
 			\begin{itemize}
-				\item \textbf{Agile - Scrum:} Practiced agile and scrum with 2 week sprints with 8 - 10 member development teams.
+				\item Mostly experienced in E-Commerce applications. Developed software solutions with efficient architecture and scalability mainly for E-Commerce applications.
+				\item \textbf{Agile - Scrum:} Practiced agile and scrum with two week sprints with 8 - 10 member development teams.
 			\end{itemize}
 		\end{cvsubsection}
 	\end{cvsection}
 	
-	\begin{cvsection}{Additional Information and Awards}
+	\begin{cvsection}{Additional Information and Accomplishments}
 		\begin{cvsubsection}{}{}{}	
 			\begin{itemize}
 				\item Got placed in first 500 in the 2012 Undergraduate Placement Examination of Turkey in 2012.
-                \item Attended Google HashCode competition and finished in the top 20\% in 2019.
 			    \item Volunteered at Community Volunteers Foundation of Turkey in 2018.
 			    \item Member of Bogazici University Underwater Sports Club.
 			    \item Played at Bogazici University Handball Team in 2018.
